"""

Revision ID: a4e06ef32e5d
Revises: 
Create Date: 2026-06-12 05:22:34.062325

"""
from collections.abc import Sequence

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = 'a4e06ef32e5d'
down_revision: str | None = None
branch_labels: str | Sequence[str] | None = None
depends_on: str | Sequence[str] | None = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('modules',
    sa.Column('name', sa.String(), nullable=False),
    sa.Column('code', sa.String(), nullable=False),
    sa.Column('parent_id', sa.UUID(), nullable=True),
    sa.Column('id', sa.Uuid(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('deleted_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['parent_id'], ['modules.id'], name=op.f('modules_parent_id_fkey'), ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id', name=op.f('modules_pkey')),
    sa.UniqueConstraint('code', name=op.f('modules_code_key'))
    )
    op.create_index('modules_deleted_at_idx', 'modules', ['deleted_at'], unique=False)
    op.create_index('modules_parent_id_idx', 'modules', ['parent_id'], unique=False)
    op.create_table('roles',
    sa.Column('name', sa.String(), nullable=False),
    sa.Column('description', sa.String(), nullable=True),
    sa.Column('rank', sa.Integer(), server_default='99', nullable=False),
    sa.Column('id', sa.Uuid(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('deleted_at', sa.DateTime(timezone=True), nullable=True),
    sa.PrimaryKeyConstraint('id', name=op.f('roles_pkey')),
    sa.UniqueConstraint('name', name=op.f('roles_name_key'))
    )
    op.create_index('roles_deleted_at_idx', 'roles', ['deleted_at'], unique=False)
    op.create_table('settings',
    sa.Column('key', sa.String(), nullable=False),
    sa.Column('value', postgresql.JSONB(astext_type=sa.Text()), server_default=sa.text("'{}'::jsonb"), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('id', sa.Uuid(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('deleted_at', sa.DateTime(timezone=True), nullable=True),
    sa.PrimaryKeyConstraint('id', name=op.f('settings_pkey')),
    sa.UniqueConstraint('key', name=op.f('settings_key_key'))
    )
    op.create_index('settings_deleted_at_idx', 'settings', ['deleted_at'], unique=False)
    op.create_table('users',
    sa.Column('email', sa.String(), nullable=True),
    sa.Column('full_name', sa.String(), nullable=True),
    sa.Column('phone', sa.String(), nullable=False),
    sa.Column('password', sa.String(), nullable=True),
    sa.Column('is_banned', sa.Boolean(), server_default='false', nullable=False),
    sa.Column('profile_image_url', sa.String(), nullable=True),
    sa.Column('date_of_birth', sa.String(), nullable=True),
    sa.Column('gender', sa.String(), nullable=True),
    sa.Column('prefer_language', sa.String(), nullable=True),
    sa.Column('registration_stage', sa.Enum('OTP_VERIFIED', 'PASSWORD_SET', 'COMPLETED', name='registrationstage', native_enum=False, length=50), server_default='OTP_VERIFIED', nullable=False),
    sa.Column('fcm_token', sa.String(), nullable=True),
    sa.Column('last_login_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('last_logout_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('google_id', sa.String(), nullable=True),
    sa.Column('apple_id', sa.String(), nullable=True),
    sa.Column('login_provider', sa.Enum('SMS', 'GOOGLE', 'APPLE', name='loginprovider', native_enum=False, length=50), nullable=True),
    sa.Column('id', sa.Uuid(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('deleted_at', sa.DateTime(timezone=True), nullable=True),
    sa.PrimaryKeyConstraint('id', name=op.f('users_pkey')),
    sa.UniqueConstraint('apple_id', name=op.f('users_apple_id_key')),
    sa.UniqueConstraint('google_id', name=op.f('users_google_id_key')),
    sa.UniqueConstraint('phone', name=op.f('users_phone_key'))
    )
    op.create_index('users_deleted_at_idx', 'users', ['deleted_at'], unique=False)
    op.create_index('users_email_idx', 'users', ['email'], unique=False)
    op.create_index('users_full_name_idx', 'users', ['full_name'], unique=False)
    op.create_index('users_is_banned_idx', 'users', ['is_banned'], unique=False)
    op.create_table('activity_logs',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('action', sa.Enum('LOGIN', 'LOGOUT', 'REGISTER', 'UPDATE_PROFILE', 'CHANGE_PASSWORD', 'FORGOT_PASSWORD_OTP', 'RESET_PASSWORD', 'ENABLE_TWO_FACTOR', 'DISABLE_TWO_FACTOR', 'VERIFY_TWO_FACTOR', 'DELETE_ACCOUNT', 'CREATE', 'UPDATE', 'DELETE', name='logaction', native_enum=False, length=50), nullable=False),
    sa.Column('description', sa.Text(), nullable=False),
    sa.Column('resource_type', sa.String(), nullable=True),
    sa.Column('resource_id', sa.String(), nullable=True),
    sa.Column('ip_address', sa.String(), nullable=True),
    sa.Column('user_agent', sa.String(), nullable=True),
    sa.Column('device', sa.String(), nullable=True),
    sa.Column('browser', sa.String(), nullable=True),
    sa.Column('os', sa.String(), nullable=True),
    sa.Column('location', sa.String(), nullable=True),
    sa.Column('status', sa.Enum('SUCCESS', 'FAILURE', name='logstatus', native_enum=False, length=50), server_default='SUCCESS', nullable=False),
    sa.Column('metadata', postgresql.JSONB(astext_type=sa.Text()), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], name=op.f('activity_logs_user_id_fkey'), ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id', name=op.f('activity_logs_pkey'))
    )
    op.create_index('activity_logs_user_id_action_created_at_idx', 'activity_logs', ['user_id', 'action', 'created_at'], unique=False)
    op.create_table('admins',
    sa.Column('full_name', sa.String(), nullable=False),
    sa.Column('password', sa.String(), nullable=True),
    sa.Column('email', sa.String(), nullable=False),
    sa.Column('profile_image_url', sa.String(), nullable=True),
    sa.Column('role_id', sa.UUID(), nullable=False),
    sa.Column('is_banned', sa.Boolean(), server_default='false', nullable=False),
    sa.Column('is_two_factor_enabled', sa.Boolean(), server_default='false', nullable=False),
    sa.Column('last_login_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('last_logout_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('id', sa.Uuid(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('deleted_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['role_id'], ['roles.id'], name=op.f('admins_role_id_fkey'), ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id', name=op.f('admins_pkey')),
    sa.UniqueConstraint('email', name=op.f('admins_email_key'))
    )
    op.create_index('admins_deleted_at_idx', 'admins', ['deleted_at'], unique=False)
    op.create_index('admins_full_name_idx', 'admins', ['full_name'], unique=False)
    op.create_index('admins_is_banned_idx', 'admins', ['is_banned'], unique=False)
    op.create_index('admins_role_id_idx', 'admins', ['role_id'], unique=False)
    op.create_table('permissions',
    sa.Column('module_id', sa.UUID(), nullable=False),
    sa.Column('action', sa.Enum('CREATE', 'READ', 'UPDATE', 'DELETE', name='actiontype', native_enum=False, length=50), nullable=False),
    sa.Column('id', sa.Uuid(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('deleted_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['module_id'], ['modules.id'], name=op.f('permissions_module_id_fkey'), ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id', name=op.f('permissions_pkey')),
    sa.UniqueConstraint('module_id', 'action', name='permissions_module_id_action_key')
    )
    op.create_index('permissions_deleted_at_idx', 'permissions', ['deleted_at'], unique=False)
    op.create_index('permissions_module_id_idx', 'permissions', ['module_id'], unique=False)
    op.create_table('audit_logs',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('admin_id', sa.UUID(), nullable=True),
    sa.Column('action', sa.Enum('LOGIN', 'LOGOUT', 'REGISTER', 'UPDATE_PROFILE', 'CHANGE_PASSWORD', 'FORGOT_PASSWORD_OTP', 'RESET_PASSWORD', 'ENABLE_TWO_FACTOR', 'DISABLE_TWO_FACTOR', 'VERIFY_TWO_FACTOR', 'DELETE_ACCOUNT', 'CREATE', 'UPDATE', 'DELETE', name='logaction', native_enum=False, length=50), nullable=False),
    sa.Column('description', sa.Text(), nullable=False),
    sa.Column('entity_name', sa.String(), nullable=True),
    sa.Column('entity_id', sa.String(), nullable=True),
    sa.Column('old_value', postgresql.JSONB(astext_type=sa.Text()), nullable=True),
    sa.Column('new_value', postgresql.JSONB(astext_type=sa.Text()), nullable=True),
    sa.Column('ip_address', sa.String(), nullable=True),
    sa.Column('user_agent', sa.String(), nullable=True),
    sa.Column('device', sa.String(), nullable=True),
    sa.Column('browser', sa.String(), nullable=True),
    sa.Column('os', sa.String(), nullable=True),
    sa.Column('location', sa.String(), nullable=True),
    sa.Column('status', sa.Enum('SUCCESS', 'FAILURE', name='logstatus', native_enum=False, length=50), server_default='SUCCESS', nullable=False),
    sa.Column('metadata', postgresql.JSONB(astext_type=sa.Text()), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['admin_id'], ['admins.id'], name=op.f('audit_logs_admin_id_fkey'), ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id', name=op.f('audit_logs_pkey'))
    )
    op.create_index('audit_logs_admin_id_action_created_at_idx', 'audit_logs', ['admin_id', 'action', 'created_at'], unique=False)
    op.create_index('audit_logs_entity_name_entity_id_idx', 'audit_logs', ['entity_name', 'entity_id'], unique=False)
    op.create_table('otp_records',
    sa.Column('user_id', sa.UUID(), nullable=True),
    sa.Column('admin_id', sa.UUID(), nullable=True),
    sa.Column('status', sa.Enum('PENDING', 'VERIFIED', 'EXPIRED', 'USED', name='otpstatus', native_enum=False, length=50), server_default='PENDING', nullable=False),
    sa.Column('purpose', sa.Enum('TWO_FACTOR', 'RESET_PASSWORD', name='otppurpose', native_enum=False, length=50), nullable=False),
    sa.Column('code_hash', sa.String(), nullable=False),
    sa.Column('expires_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('request_id', sa.String(), nullable=True),
    sa.Column('attempts', sa.Integer(), server_default='0', nullable=False),
    sa.Column('max_attempts', sa.Integer(), server_default='3', nullable=False),
    sa.Column('id', sa.Uuid(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.CheckConstraint('(user_id IS NOT NULL) <> (admin_id IS NOT NULL)', name=op.f('otp_records_owner_check')),
    sa.ForeignKeyConstraint(['admin_id'], ['admins.id'], name=op.f('otp_records_admin_id_fkey'), ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], name=op.f('otp_records_user_id_fkey'), ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id', name=op.f('otp_records_pkey'))
    )
    op.create_index('otp_records_admin_id_idx', 'otp_records', ['admin_id'], unique=False)
    op.create_index('otp_records_admin_id_purpose_status_idx', 'otp_records', ['admin_id', 'purpose', 'status'], unique=False)
    op.create_index('otp_records_expires_at_idx', 'otp_records', ['expires_at'], unique=False)
    op.create_index('otp_records_user_id_idx', 'otp_records', ['user_id'], unique=False)
    op.create_index('otp_records_user_id_purpose_status_idx', 'otp_records', ['user_id', 'purpose', 'status'], unique=False)
    op.create_table('refresh_tokens',
    sa.Column('token_hash', sa.String(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=True),
    sa.Column('admin_id', sa.UUID(), nullable=True),
    sa.Column('expires_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('is_revoked', sa.Boolean(), server_default='false', nullable=False),
    sa.Column('id', sa.Uuid(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.CheckConstraint('(user_id IS NOT NULL) <> (admin_id IS NOT NULL)', name=op.f('refresh_tokens_owner_check')),
    sa.ForeignKeyConstraint(['admin_id'], ['admins.id'], name=op.f('refresh_tokens_admin_id_fkey'), ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], name=op.f('refresh_tokens_user_id_fkey'), ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id', name=op.f('refresh_tokens_pkey')),
    sa.UniqueConstraint('token_hash', name=op.f('refresh_tokens_token_hash_key'))
    )
    op.create_index('refresh_tokens_admin_id_idx', 'refresh_tokens', ['admin_id'], unique=False)
    op.create_index('refresh_tokens_admin_id_is_revoked_idx', 'refresh_tokens', ['admin_id', 'is_revoked'], unique=False)
    op.create_index('refresh_tokens_expires_at_idx', 'refresh_tokens', ['expires_at'], unique=False)
    op.create_index('refresh_tokens_token_hash_idx', 'refresh_tokens', ['token_hash'], unique=False)
    op.create_index('refresh_tokens_user_id_idx', 'refresh_tokens', ['user_id'], unique=False)
    op.create_index('refresh_tokens_user_id_is_revoked_idx', 'refresh_tokens', ['user_id', 'is_revoked'], unique=False)
    op.create_table('role_permissions',
    sa.Column('role_id', sa.UUID(), nullable=False),
    sa.Column('permission_id', sa.UUID(), nullable=False),
    sa.ForeignKeyConstraint(['permission_id'], ['permissions.id'], name=op.f('role_permissions_permission_id_fkey'), ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['role_id'], ['roles.id'], name=op.f('role_permissions_role_id_fkey'), ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('role_id', 'permission_id', name=op.f('role_permissions_pkey'))
    )
    op.create_index('role_permissions_permission_id_idx', 'role_permissions', ['permission_id'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index('role_permissions_permission_id_idx', table_name='role_permissions')
    op.drop_table('role_permissions')
    op.drop_index('refresh_tokens_user_id_is_revoked_idx', table_name='refresh_tokens')
    op.drop_index('refresh_tokens_user_id_idx', table_name='refresh_tokens')
    op.drop_index('refresh_tokens_token_hash_idx', table_name='refresh_tokens')
    op.drop_index('refresh_tokens_expires_at_idx', table_name='refresh_tokens')
    op.drop_index('refresh_tokens_admin_id_is_revoked_idx', table_name='refresh_tokens')
    op.drop_index('refresh_tokens_admin_id_idx', table_name='refresh_tokens')
    op.drop_table('refresh_tokens')
    op.drop_index('otp_records_user_id_purpose_status_idx', table_name='otp_records')
    op.drop_index('otp_records_user_id_idx', table_name='otp_records')
    op.drop_index('otp_records_expires_at_idx', table_name='otp_records')
    op.drop_index('otp_records_admin_id_purpose_status_idx', table_name='otp_records')
    op.drop_index('otp_records_admin_id_idx', table_name='otp_records')
    op.drop_table('otp_records')
    op.drop_index('audit_logs_entity_name_entity_id_idx', table_name='audit_logs')
    op.drop_index('audit_logs_admin_id_action_created_at_idx', table_name='audit_logs')
    op.drop_table('audit_logs')
    op.drop_index('permissions_module_id_idx', table_name='permissions')
    op.drop_index('permissions_deleted_at_idx', table_name='permissions')
    op.drop_table('permissions')
    op.drop_index('admins_role_id_idx', table_name='admins')
    op.drop_index('admins_is_banned_idx', table_name='admins')
    op.drop_index('admins_full_name_idx', table_name='admins')
    op.drop_index('admins_deleted_at_idx', table_name='admins')
    op.drop_table('admins')
    op.drop_index('activity_logs_user_id_action_created_at_idx', table_name='activity_logs')
    op.drop_table('activity_logs')
    op.drop_index('users_is_banned_idx', table_name='users')
    op.drop_index('users_full_name_idx', table_name='users')
    op.drop_index('users_email_idx', table_name='users')
    op.drop_index('users_deleted_at_idx', table_name='users')
    op.drop_table('users')
    op.drop_index('settings_deleted_at_idx', table_name='settings')
    op.drop_table('settings')
    op.drop_index('roles_deleted_at_idx', table_name='roles')
    op.drop_table('roles')
    op.drop_index('modules_parent_id_idx', table_name='modules')
    op.drop_index('modules_deleted_at_idx', table_name='modules')
    op.drop_table('modules')
    # ### end Alembic commands ###
